[gd_scene load_steps=6 format=3 uid="uid://cvttvxfmut0tg"]

[ext_resource type="Script" uid="uid://bes1kblde20ns" path="res://scripts/honey_drop.gd" id="1_m5heq"]
[ext_resource type="Texture2D" uid="uid://cjn1ldp60xocs" path="res://assets/honey_drop.png" id="2_m5heq"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5np60"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5fghd"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5heq"]
size = Vector2(26, 30)

[node name="HoneyDrop" type="RigidBody2D"]
collision_layer = 128
collision_mask = 4
physics_material_override = SubResource("PhysicsMaterial_5np60")
lock_rotation = true
contact_monitor = true
max_contacts_reported = 3
script = ExtResource("1_m5heq")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.33, 0.33)
texture = ExtResource("2_m5heq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5fghd")
disabled = true

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("RectangleShape2D_m5heq")
disabled = true

[node name="ActivationTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_activation_timer_timeout"]
